Deleted obsolete cell

--- a/NNDL_hw3_part1.ipynb
+++ b/NNDL_hw3_part1.ipynb
@@ -6,7 +6,7 @@
       "name": "NNDL_hw3_part1.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOQiw2Is5YC5o1T0vJRXjbV",
+      "authorship_tag": "ABX9TyNHa4efhlRdqBqQExR7yHGC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,7 +64,7 @@
       "source": [
         "!pip install gym"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -96,7 +96,7 @@
         "from torch import nn\n",
         "from collections import deque # this python module implements exactly what we need for the replay memeory"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -128,7 +128,7 @@
         "!pip install pyvirtualdisplay\n",
         "!pip install piglet"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -190,7 +190,7 @@
         "from pyvirtualdisplay import Display\n",
         "from gym.wrappers import Monitor"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -206,7 +206,7 @@
         "display = Display(visible=0, size=(1400, 900))\n",
         "display.start()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -234,7 +234,7 @@
         "    !bash ../xvfb start\n",
         "    %env DISPLAY=:1"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -264,7 +264,7 @@
         "  env = Monitor(env, './video', force=True, video_callable=video_callable)\n",
         "  return env"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -316,7 +316,7 @@
         "    def __len__(self):\n",
         "        return len(self.memory) # Return the number of samples currently stored in the memory"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -372,7 +372,7 @@
         "    def forward(self, x):\n",
         "        return self.linear(x)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -453,7 +453,7 @@
         "        \n",
         "    return action, net_out.numpy()"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -517,7 +517,7 @@
         "    \n",
         "    return action, net_out.numpy()"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -548,8 +548,7 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "BLGXTxrpWuFe",
         "outputId": "cb245e0b-f291-4982-9265-afdde6c98261"
@@ -570,7 +569,7 @@
         "plt.xlabel('Iteration')\r\n",
         "plt.ylabel('Exploration profile (Softmax temperature)')"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -604,8 +603,7 @@
       "metadata": {
         "id": "G-f78CC3ptt2",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "37bc18f9-8824-4dcf-cbe1-8615832e1024"
       },
@@ -623,7 +621,7 @@
         "plt.xlabel('Iteration')\n",
         "plt.ylabel('Exploration profile (Softmax temperature)')"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -650,42 +648,6 @@
             "needs_background": "light"
           }
         }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "iX7JpFeObm08"
-      },
-      "source": [
-        "# ### Define experimental exploration profile\r\n",
-        "# initial_value = 3\r\n",
-        "# num_iterations = 1000\r\n",
-        "\r\n",
-        "# def gaussian(x, mu, sig):\r\n",
-        "#     return np.exp(-np.power(x - mu, 2.) / (2 * np.power(sig, 2.)))\r\n",
-        "\r\n",
-        "# exp_decay = np.exp(-np.log(initial_value) / num_iterations * 6) # We compute the exponential decay in such a way the shape of the exploration profile does not depend on the number of iterations\r\n",
-        "# exploration_profile = [initial_value * (exp_decay ** i) *np.abs(np.cos(i/20)) + gaussian(i, 0, 200)*initial_value for i in range(num_iterations)] \r\n",
-        "# # exploration_profile = [gaussian(x, 0, 200)*initial_value for x in range(num_iterations)]\r\n",
-        "\r\n",
-        "# ### Plot exploration profile\r\n",
-        "# plt.figure(figsize=(12,8))\r\n",
-        "# plt.plot(exploration_profile)\r\n",
-        "# plt.grid()\r\n",
-        "# plt.xlabel('Iteration')\r\n",
-        "# plt.ylabel('Exploration profile (Softmax temperature)')"
-      ],
-      "execution_count": 15,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "oXLB_rUCyoUT"
-      },
-      "source": [
-        ""
       ]
     },
     {
@@ -783,7 +745,7 @@
         "    nn.utils.clip_grad_norm_(policy_net.parameters(), 2)\n",
         "    optimizer.step()"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -915,7 +877,7 @@
         "        break\n",
         "env.close()"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1065,7 +1027,7 @@
         "        break\r\n",
         "env.close()"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1619,7 +1581,7 @@
         "ax.set_ylabel(\"score\")\r\n",
         "ax.grid(linestyle=\":\")"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1650,7 +1612,7 @@
         "# Display the videos, not required outside Colab\n",
         "show_videos()"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1832,7 +1794,7 @@
         "    print(f\"EPISODE {num_episode + 1} - FINAL SCORE: {score}\") \n",
         "env.close()"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1866,7 +1828,7 @@
         "# Display the videos, not required outside Colab\n",
         "show_videos()"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
